# zk-optimization-kit

./: .gitignore  Cargo.toml  LICENSE  README.md
bench-results/: results-laptop.json  results-pi.json
scripts/: cross-build.sh  deploy.sh
verifier/: Cargo.toml
verifier/src/: main.rs
verifier/tests/: verify_sample.rs
zk-core/: Cargo.toml
zk-core/src/: bench.rs  hwinfo.rs  lib.rs  main.rs  prover.rs  server.rs
zk-core/src/circuit/: cubic.rs  merkle.rs  mod.rs  poseidon.rs
zk-core/static/: index.html
